--- a/paquescolar-web/src/main/webapp/app/con05MontosporProveedor.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con05MontosporProveedor.xhtml
@@ -30,7 +30,7 @@
                         <p:outputLabel value="#{bundle['compra.rubroAdq']}:" />  
                         <p:selectOneMenu id="idRubro" value="#{creditoBancarioController.rubro}" effect="fade">
                             <f:selectItem itemLabel="Seleccione un rubro" itemValue="" />  
-                            <f:selectItems value="#{anhoProcesoController.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}"/>
+                            <f:selectItems value="#{parametrosMB.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}"/>
                             <p:ajax listener="#{creditoBancarioController.resetNit}" update="idEntFinan"/>
                         </p:selectOneMenu>
                         <p:outputLabel value="Entidad Financiera:" />  
