--- a/paquescolar-web/src/main/webapp/app/gra06Seguimiento.xhtml
+++ b/paquescolar-web/src/main/webapp/app/gra06Seguimiento.xhtml
@@ -35,7 +35,7 @@
                             <p:outputLabel value="2. Rubro de adquisición:" />  
                             <p:selectOneMenu id="idRubro" value="#{graficoController.rubroSeg}" effect="fade">
                                 <f:selectItem itemLabel="Seleccione un rubro" itemValue="" />  
-                                <f:selectItems value="#{anhoProcesoController.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}"/>
+                                <f:selectItems value="#{parametrosMB.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}"/>
                             </p:selectOneMenu>
                             <p:spacer width="8" height="8"/>
                             <p:commandButton action="#{graficoController.buscarAvanceSeguimiento}"  update="pnlGrafico pnlGrafico1 pnlGrafico2" value="Buscar" ajax="true" id="ingresar" icon="ui-icon-search"/>
