--- a/paquescolar-web/src/main/webapp/app/con04DetalleModificativas.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con04DetalleModificativas.xhtml
@@ -33,7 +33,7 @@
                             <p:outputLabel value="Rubro de adquisicion:" />
                             <p:selectOneMenu id="cboRubro" value="#{modificatoriaController.idRubro}">
                                 <f:selectItem itemLabel="Seleccione un rubro" itemValue="" />
-                                <f:selectItems value="#{anhoProcesoController.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}" />
+                                <f:selectItems value="#{parametrosMB.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}" />
                                 <p:ajax update="pnlFiltro" listener="#{modificatoriaController.buscarProceso}" />
                             </p:selectOneMenu>
                             <p:outputLabel value="Tipo de consulta:" />
