--- a/paquescolar-web/src/main/webapp/app/con06ExcelSeguimientoReports.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con06ExcelSeguimientoReports.xhtml
@@ -35,7 +35,7 @@
                             <p:outputLabel value="2. Rubro de adquisición:" />
                             <p:selectOneMenu id="cboRubro" value="#{graficoController.rubroSeg}">
                                 <f:selectItem itemLabel="Seleccione un rubro" itemValue="" />
-                                <f:selectItems value="#{anhoProcesoController.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}"/>
+                                <f:selectItems value="#{parametrosMB.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}"/>
                                 <p:ajax listener="#{graficoController.updateDetProcesoAdq}"/>
                             </p:selectOneMenu>
                         </h:panelGrid>
