--- a/paquescolar-web/src/main/webapp/app/reg02DetalleOferta.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02DetalleOferta.xhtml
@@ -38,7 +38,7 @@
                         <p:outputLabel value="Rubro de adquisicion:" />
                         <p:selectOneMenu id="cboRubro" value="#{ofertaMB.rubro}" disabled="#{participantesController.deshabilitado}" onkeydown="setaFoco(this);">
                             <f:selectItem itemLabel="Seleccione un rubro" itemValue="" />  
-                            <f:selectItems value="#{anhoProcesoController.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}" />
+                            <f:selectItems value="#{parametrosMB.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}" />
                             <p:ajax update="pnlFiltro dvDetalle" listener="#{ofertaMB.limpiarFiltros}"/>
                         </p:selectOneMenu>
 
