--- a/paquescolar-web/src/main/webapp/app/reg07Reintegro.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg07Reintegro.xhtml
@@ -29,7 +29,7 @@
                     <p:panelGrid id="pnlFiltro" columns="2" columnClasses="col3_label,col9" 
                                  styleClass="ui-panelgrid-blank form-group form-elements" style="border:0px none; background-color:transparent;">
                         <h:outputText value="Departamento"/>
-                        <p:selectOneMenu id="codigoDepartamento" value="#{pagoProveedoresController.codigoDepartamento}" disabled="#{datosGeograficosController.usuarioDepartamental}" >
+                        <p:selectOneMenu id="codigoDepartamento" value="#{pagoProveedoresController.codigoDepartamento}" disabled="#{parametrosMB.usuarioDepartamental}" >
                             <f:selectItem itemLabel="Seleccione un departamento" itemValue="" />
                             <f:selectItems value="#{catalogosGeneralesController.lstDepartamentos}" var="depa" itemValue="#{depa.codigoDepartamento}" itemLabel="#{depa.codigoDepartamento} - #{depa.nombreDepartamento}" />
                             <p:ajax listener="#{pagoProveedoresController.clearRubroAndRequerimiento}"  update="codigoDepartamento cboRubro cboRequerimiento"/>
@@ -38,7 +38,7 @@
                         <p:outputLabel value="#{bundle['compra.rubroAdq']}:" />
                         <p:selectOneMenu id="cboRubro" value="#{pagoProveedoresController.idRubro}">
                             <f:selectItem itemLabel="Seleccione un rubro" itemValue="0" />
-                            <f:selectItems value="#{anhoProcesoController.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}" />
+                            <f:selectItems value="#{parametrosMB.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}" />
                             <p:ajax listener="#{pagoProveedoresController.recuperarRequerimientos}" update="cboRequerimiento"/>
                         </p:selectOneMenu>
 
