--- a/paquescolar-web/src/main/webapp/app/reg07Requerimiento.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg07Requerimiento.xhtml
@@ -38,7 +38,7 @@
                         </p:selectOneMenu>
 
                         <p:outputLabel value="#{bundle['depa']}"/>
-                        <p:selectOneMenu id="codigoDepartamento" value="#{generarRequerimientoMB.codigoDepartamento}"  required="true" disabled="#{datosGeograficosController.usuarioDepartamental}" >
+                        <p:selectOneMenu id="codigoDepartamento" value="#{generarRequerimientoMB.codigoDepartamento}"  required="true" disabled="#{parametrosMB.usuarioDepartamental}" >
                             <f:selectItem itemLabel="Seleccione un departamento" itemValue="" />
                             <f:selectItems value="#{catalogosGeneralesController.lstDepartamentos}" var="depa" itemValue="#{depa.codigoDepartamento}" itemLabel="#{depa.nombreDepartamento}"/>
                             <p:ajax update="codigoDepartamento cboBanco cboCuentaBancaria" listener="#{generarRequerimientoMB.updateCuentaBancaria}"/>
@@ -47,7 +47,7 @@
                         <p:outputLabel value="#{bundle['compra.rubroAdq']}" />
                         <p:selectOneMenu id="cboRubro" value="#{generarRequerimientoMB.idRubro}">
                             <f:selectItem itemLabel="Seleccione un rubro" itemValue="" />
-                            <f:selectItems value="#{anhoProcesoController.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}" />
+                            <f:selectItems value="#{parametrosMB.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}" />
                             <p:ajax update="cboRubro txtConcepto" listener="#{generarRequerimientoMB.obtenerDetalleProceso}"/>
                         </p:selectOneMenu>
 
