inicio de contrataciones 2020

--- a/paquescolar-web/src/main/webapp/app/comunes/fragmentos/contrataciones/ofertaListadoProveedores.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/fragmentos/contrataciones/ofertaListadoProveedores.xhtml
@@ -20,7 +20,7 @@
                     </h:outputText>
                     
                     <h:outputText value="Porcentaje adjudicación "/>
-                    <h:outputText value="#{capaEmpresa.porcentajeAdjudicacion}" rendered="#{!menuController.isUsuarioDigitador}">
+                    <h:outputText value="#{capaEmpresa.porcentajeAdjudicacion}" >
                         <f:convertNumber pattern="#,###.00"/>
                     </h:outputText>
 
